--- a/starter/css/main.css
+++ b/starter/css/main.css
@@ -21,7 +21,7 @@ body {
   height: 100%;
   display: grid;
   grid-template-rows: 10vh 1fr;
-  grid-template-columns: 18vw repeat(4, 1fr);
+  grid-template-columns: minmax(225px, 15.625em) repeat(4, 1fr);
   grid-template-areas: "sidebar header header header header" "sidebar main main main main ";
 }
 
@@ -29,7 +29,7 @@ body {
   height: 100%;
   display: grid;
   grid-template-rows: 10vh 1fr;
-  grid-template-columns: 18vw repeat(4, 1fr);
+  grid-template-columns: minmax(200px, 15.625em) repeat(4, 1fr);
   grid-template-areas: "sidebar header header header header" "main main main main main ";
 }
 
@@ -73,24 +73,18 @@ body {
   border-left: none;
   justify-content: space-between;
 }
-.header__heading {
-  flex: 6;
-}
 .header__actions {
-  flex: 1;
   display: flex;
-  justify-content: space-between;
 }
 
 .vert-ellipsis {
-  height: 100%;
   align-self: center;
+  margin-left: 1.5rem;
 }
 
 .sidebar {
   color: #828fa3;
   border: 1px solid #e4ebfa;
-  padding: 2rem 2rem;
   display: flex;
   flex-direction: column;
 }
@@ -104,8 +98,8 @@ body {
 }
 .logo-container {
   display: flex;
+  padding: 2rem 2rem;
   align-items: center;
-  margin-bottom: 3rem;
 }
 
 .list {
@@ -113,13 +107,19 @@ body {
 }
 .list__item {
   display: flex;
+  align-items: center;
+  white-space: nowrap;
 }
 .list__item:not(:last-child) {
   margin: 2.5rem 0;
 }
 
 .board {
+  width: 13px;
   margin-right: 1rem;
+}
+.board-container {
+  padding: 2rem 2rem;
 }
 .board-count {
   word-spacing: 1px;
@@ -132,7 +132,13 @@ body {
 }
 
 .toggle {
+  padding: 2rem 1rem;
   margin-top: auto;
+}
+@media (max-width: 75em) {
+  .toggle {
+    padding: 2rem 0.5rem;
+  }
 }
 .toggle-container {
   height: 5vh;
@@ -179,7 +185,6 @@ body {
 
 .create {
   color: #635fc7;
-  font-size: 1rem;
 }
 .create-board {
   border: none;
