--- a/starter/sass/1-layout/_sidebar.scss
+++ b/starter/sass/1-layout/_sidebar.scss
@@ -1,9 +1,9 @@
 @use "../0-base/colors" as color;
+@use "../0-base/queries" as query;
 
 .sidebar {
     color: color.$color-mediumgrey;
     border: 1px solid color.$color-board;
-    padding: 2rem 2rem;
     display: flex;
     flex-direction: column;
     &__heading {
@@ -16,16 +16,17 @@
     height: 20px;
     &-container {
         display: flex;
+        padding: 2rem 2rem;
         align-items: center;
-        margin-bottom: 3rem;
     }
 }
 
 .list {
     list-style: none;
-
     &__item {
         display: flex;
+        align-items: center;
+        white-space: nowrap;
         &:not(:last-child) {
             margin: 2.5rem 0;
         }
@@ -33,7 +34,11 @@
 }
 
 .board {
+    width: 13px;
     margin-right: 1rem;
+    &-container {
+        padding: 2rem 2rem;
+    }
     &-count {
         word-spacing: 1px;
         letter-spacing: 2px;
@@ -48,7 +53,12 @@
 }
 
 .toggle {
+    padding: 2rem 1rem;
     margin-top: auto; // pushes container that holds the toggle btn to end of sidebar
+
+    @media (max-width: query.$breakpoint-desktop) {
+        padding: 2rem 0.5rem;
+    }
     &-container {
         height: 5vh;
         background: color.$color-lightgrey;
