--- a/starter/sass/0-base/_colors.scss
+++ b/starter/sass/0-base/_colors.scss
@@ -1,6 +1,7 @@
 // Button
 $color-primary: #635fc7;
 $color-secondary: #a8a4ff;
+$color-primary-disabled: #625fc764;
 
 // Text
 $color-main: #000112;
