--- a/starter/sass/1-layout/_main.scss
+++ b/starter/sass/1-layout/_main.scss
@@ -1,15 +1,23 @@
 @use "../0-base/colors" as color;
+@use "../0-base/queries" as query;
 
 .main {
     display: grid;
     background: color.$color-lightgrey;
     grid-template-rows: 1fr;
 
-    // < ----- ONCE COLUMN IS ADDED : SET THIS GRID LAYOUT ------ >
+    // < ----- ONCE A COLUMN IS ADDED : SET THIS GRID LAYOUT ------ >
     // gap: 2rem;
     // padding: 2rem;
     // grid-template-areas: " main main main main main"; // 1200px & up screen size
     // grid-template-columns: repeat(5, minmax(210px, 225px)); // 1200px & up screen size
+
+    @media (max-width: query.$breakpoint-mobile) {
+        // < ----- ONCE A COLUMN IS ADDED : SET THIS GRID LAYOUT ------ >
+        // gap: 2rem;
+        // padding: 2rem;
+        // grid-template-columns: repeat(4, minmax(225px, 15.625em)); // mobile
+    }
 }
 
 .empty {
