--- a/starter/sass/1-layout/_grid.scss
+++ b/starter/sass/1-layout/_grid.scss
@@ -1,3 +1,5 @@
+@use "../0-base/queries" as query;
+
 .container {
     height: 100%;
     display: grid;
@@ -8,6 +10,14 @@
     grid-template-areas:
         "sidebar header header header header"
         "sidebar main main main main ";
+
+    @media (max-width: query.$breakpoint-mobile) {
+        grid-template-rows: 7vh 1fr;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-areas:
+            "header header header header header"
+            "main main main main main ";
+    }
 }
 
 .container-hide-sidebar {
