--- a/starter/sass/0-base/_reset.scss
+++ b/starter/sass/0-base/_reset.scss
@@ -1,5 +1,3 @@
-@use "fonts" as font;
-
 *,
 *::before,
 *::after {
@@ -9,12 +7,70 @@
 }
 
 html {
+    color: var(--color-text);
     font-size: 75%; // 12px --> 12px/16px = 75% --> 1rem = 12px
     box-sizing: border-box;
     scroll-behavior: smooth;
+
+    --font-primary: "Plus Jakarta Sans", sans-serif;
+
+    // Button
+    --color-primary: #635fc7;
+    --color-secondary: #a8a4ff;
+    --color-primary-disabled: #625fc764;
+
+    //  Text
+    --color-text: #828fa3;
+    --color-delete: #ea5555;
+    --color-deletehover: #ff9898;
+
+    // Initial || Light Theme
+    --color-main: #f4f7fd;
+    --color-line: #e4ebfa;
+    --color-light: #fff;
+    --color-dark: #000112;
+
+    &[data-theme="dark"] {
+        --color-main: #20212c;
+        --color-line: #3e3f4e;
+        --color-light: #2b2c37;
+        --color-dark: #fff;
+    }
+}
+
+html.transition,
+html.transition *,
+html.transition *:before,
+html.transition *:after {
+    transition: all 750ms !important;
 }
 
 body {
     height: 100vh;
-    font-family: font.$font-primary;
+    font-family: var(--font-primary);
+}
+
+.sidebar {
+    background: var(--color-light);
+}
+
+.main {
+    background: var(--color-main);
+}
+
+.header {
+    color: var(--color-dark);
+    background: var(--color-light);
+}
+
+.toggle-container {
+    background: var(--color-main);
+}
+
+.logo-container {
+    color: var(--color-dark);
+}
+
+.create-board {
+    background: var(--color-white);
 }
