--- a/starter/sass/1-layout/_header.scss
+++ b/starter/sass/1-layout/_header.scss
@@ -1,8 +1,7 @@
-@use "../0-base/colors" as color;
 @use "../0-base/queries" as query;
 
 .header {
-    border: 1px solid color.$color-board;
+    border: 1px solid var(--color-line);
     display: flex;
     padding: 0 2rem;
     align-items: center;
