--- a/starter/sass/2-components/_checkbox.scss
+++ b/starter/sass/2-components/_checkbox.scss
@@ -1,5 +1,3 @@
-@use "../0-base/colors" as color;
-
 input[type="checkbox"] {
     width: 0;
     height: 0;
@@ -14,7 +12,7 @@ label {
     height: 23px;
     cursor: pointer;
     position: relative;
-    background: color.$color-primary;
+    background: var(--color-primary);
     text-indent: -9999px;
     border-radius: 100px;
 }
@@ -34,7 +32,7 @@ label:after {
 
 // once box is checked, change label color
 input:checked + label {
-    background: color.$color-primary;
+    background: var(--color-primary);
 }
 
 // animation after box is checked
