--- a/starter/css/main.css
+++ b/starter/css/main.css
@@ -12,6 +12,7 @@ html {
   box-sizing: border-box;
   scroll-behavior: smooth;
   --font-primary: "Plus Jakarta Sans", sans-serif;
+  --color-white: #fff;
   --color-primary: #635fc7;
   --color-secondary: #a8a4ff;
   --color-primary-disabled: #625fc764;
@@ -64,7 +65,7 @@ body {
 }
 
 .create-board {
-  background: var(--color-white);
+  background: var(--color-light);
 }
 
 .container {
@@ -193,29 +194,65 @@ body {
   list-style: none;
 }
 .list__item {
+  margin: 0.75rem 0;
+  height: 3em;
   display: flex;
+  position: relative;
   align-items: center;
   white-space: nowrap;
+  padding-left: 1.5rem;
 }
-.list__item:not(:last-child) {
-  margin: 2.5rem 0;
+.list__item:first-child {
+  margin-top: 2rem;
 }
-
-.board {
-  width: 13px;
+.list__item:not(:last-child)::before {
+  top: 0;
+  left: 0;
+  width: 3px;
+  height: 100%;
+  content: "";
+  position: absolute;
+  transform: scaleY(0);
+  transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s;
+  background: var(--color-primary);
   margin-right: 1rem;
 }
+.list__item:hover::before, .list__item--active:not(:last-child)::before {
+  width: 90%;
+  transform: scaleY(1);
+  border-radius: 0 25px 25px 0;
+}
+.list__item:hover:not(:last-child) {
+  color: var(--color-white);
+  transition: 0.2s;
+  transition-delay: 0.3s;
+}
+.list__item:hover:not(:last-child) .icon-board {
+  filter: brightness(2);
+  transition: 0.2s;
+  transition-delay: 0.3s;
+}
+.list__item--active {
+  color: var(--color-white);
+}
+.list__item--active > .icon-board {
+  filter: brightness(2);
+}
+.list-link:link, .list-link:visited {
+  color: inherit;
+  z-index: 10;
+  position: relative;
+  text-decoration: none;
+}
+
 .board-container {
-  padding: 2rem 2rem;
+  padding: 2rem 0;
 }
 .board-count {
   word-spacing: 1px;
+  padding-left: 1.5rem;
   letter-spacing: 2px;
   text-transform: uppercase;
-}
-.board-link:link, .board-link:active, .board-link:visited {
-  color: inherit;
-  text-decoration: none;
 }
 
 .toggle {
@@ -318,6 +355,14 @@ body {
   .icon-down {
     display: inline;
   }
+}
+
+.icon-board {
+  z-index: 10;
+  margin-right: 1rem;
+}
+.icon-board--create {
+  margin-right: 1rem;
 }
 
 input[type=checkbox] {
