--- a/starter/sass/1-layout/_sidebar.scss
+++ b/starter/sass/1-layout/_sidebar.scss
@@ -25,33 +25,80 @@
 }
 
 .list {
+    // display: none;  <-- apply when 'hide sidebar' btn is clicked
     list-style: none;
     &__item {
+        margin: 0.75rem 0;
+        height: 3em;
         display: flex;
+        position: relative;
         align-items: center;
         white-space: nowrap;
-        &:not(:last-child) {
-            margin: 2.5rem 0;
+        padding-left: 1.5rem;
+        &:first-child {
+            margin-top: 2rem;
         }
+        &:not(:last-child)::before {
+            top: 0;
+            left: 0;
+            width: 3px;
+            height: 100%;
+            content: "";
+            position: absolute;
+            transform: scaleY(0);
+            transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s;
+            background: var(--color-primary);
+            margin-right: 1rem;
+        }
+
+        &:hover::before,
+        &--active:not(:last-child)::before {
+            width: 90%;
+            transform: scaleY(1);
+            border-radius: 0 25px 25px 0;
+        }
+
+        // <!---  changes list items text color to white on hover --->
+        &:hover:not(:last-child) {
+            color: var(--color-white);
+            transition: 0.2s;
+            transition-delay: 0.3s;
+        }
+        // <!---  changes the list board icon to white on hover --->
+        &:hover:not(:last-child) .icon-board {
+            filter: brightness(2);
+            transition: 0.2s;
+            transition-delay: 0.3s;
+        }
+
+        // <!---  applies to element with active board class being viewed --->
+        &--active {
+            color: var(--color-white);
+        }
+
+        &--active > .icon-board {
+            filter: brightness(2);
+        }
+    }
+
+    &-link:link,
+    &-link:visited {
+        color: inherit;
+        z-index: 10;
+        position: relative;
+        text-decoration: none;
     }
 }
 
 .board {
-    width: 13px;
-    margin-right: 1rem;
     &-container {
-        padding: 2rem 2rem;
+        padding: 2rem 0;
     }
     &-count {
         word-spacing: 1px;
+        padding-left: 1.5rem;
         letter-spacing: 2px;
         text-transform: uppercase;
-    }
-    &-link:link,
-    &-link:active,
-    &-link:visited {
-        color: inherit;
-        text-decoration: none;
     }
 }
 
