--- a/starter/sass/1-layout/_sidebar.scss
+++ b/starter/sass/1-layout/_sidebar.scss
@@ -25,7 +25,6 @@
 }
 
 .list {
-    // display: none;  <-- apply when 'hide sidebar' btn is clicked
     list-style: none;
     &__item {
         margin: 0.75rem 0;
@@ -50,7 +49,6 @@
             background: var(--color-primary);
             margin-right: 1rem;
         }
-
         &:hover::before,
         &--active:not(:last-child)::before {
             width: 90%;
@@ -64,9 +62,9 @@
             transition: 0.2s;
             transition-delay: 0.3s;
         }
-        // <!---  changes the list board icon to white on hover --->
+        // <!---  changes list board icon to white on hover --->
         &:hover:not(:last-child) .icon-board {
-            filter: brightness(2);
+            fill: var(--color-white);
             transition: 0.2s;
             transition-delay: 0.3s;
         }
@@ -75,7 +73,6 @@
         &--active {
             color: var(--color-white);
         }
-
         &--active > .icon-board {
             filter: brightness(2);
         }
@@ -87,6 +84,22 @@
         z-index: 10;
         position: relative;
         text-decoration: none;
+    }
+
+    // <!---  last list item styles --->
+    & li:last-child span {
+        color: var(--color-primary);
+        &:hover {
+            color: var(--color-secondary);
+            transition: 0.3s;
+        }
+    }
+    & li:last-child .icon-board--create {
+        fill: var(--color-primary);
+    }
+    & li:last-child:hover .icon-board--create {
+        fill: var(--color-secondary);
+        transition: 0.3s;
     }
 }
 
