--- a/starter/sass/0-base/_reset.scss
+++ b/starter/sass/0-base/_reset.scss
@@ -8,7 +8,7 @@
 
 html {
     color: var(--color-text);
-    font-size: 75%; // 12px --> 12px/16px = 75% --> 1rem = 12px
+    font-size: 75%; // 12px --> 12px/16px = 75% --> 1rem = 12px  10/16 = 62.5% 1rem = 10px
     box-sizing: border-box;
     scroll-behavior: smooth;
 
@@ -33,7 +33,7 @@ html {
 
     &[data-theme="dark"] {
         --color-main: #20212c;
-        --color-line: #3e3f4e;
+        --color-line: #25252f;
         --color-light: #2b2c37;
         --color-dark: #fff;
     }
