--- a/starter/sass/2-components/_buttons.scss
+++ b/starter/sass/2-components/_buttons.scss
@@ -1,4 +1,6 @@
+@use "../0-base/reset" as reset;
 @use "../0-base/queries" as query;
+@use "../3-helpers/mixins" as mixins;
 
 .btn {
     color: #fff; // later, if a board doesn't contain columns disable button and change color to disabled color
@@ -14,6 +16,15 @@
     &-column {
         margin: 1rem 7rem;
     }
+
+    &-add-task {
+        @include mixins.addTaskStyles;
+    }
+
+    &-add-column {
+        @include mixins.addColumnStyles;
+    }
+
     &-toggle {
         cursor: pointer;
         margin: 0 1rem 0 0.3rem;
@@ -87,5 +98,21 @@
     margin-right: 1rem;
     &--create {
         margin-right: 1rem;
+    }
+}
+
+// <!--- Modal View | Buttons --->
+.modal {
+    &-close {
+        @include mixins.cross(18px, #828fa3, 4px);
+    }
+    &-delete,
+    &-edit {
+        padding: 5px;
+    }
+    &-delete,
+    &-edit,
+    &-close {
+        cursor: pointer;
     }
 }
